@@ -2,8 +2,9 @@
 2018/2/14
 v 5-0.31
 
-- Added ObjectList.
+- Added ObjectList and fixed it.
 - Fixed calls to _are_integer and _are_decimal in Engine::setupBuiltinFunctionExecution().
+- Added FuncWrapper and void addForeignFuncInstance( Engine&, const String&, bool (*f)( FFIServices& ) )
 
 
 ====================
